Fixed overall progress percentage

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -22,8 +22,7 @@
       </button>
     </div>
     <div>
-      <progress class="progress-bar" id="progressBar" value="10" max="100">
-        0%
+      <progress class="progress-bar" id="progressBar" value="0" max="100"></progress>
     </div>
   </body>
   <script src="message-listeners.js"></script>
