Added more fields

--- a/search/search-page.html
+++ b/search/search-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title id="pageTitle">LinkedIn Jobs</title>
     <meta
@@ -21,9 +21,12 @@
       <table id="jobsTable" class="table">
         <thead>
           <tr>
-            <th>LinkedIn Job ID</th>
+            <th>Job Title</th>
+            <th>Location</th>
+            <th>Company</th>
+            <th>Posted since</th>
+            <th>Number of applicants</th>
             <th>Link</th>
-            <th>Job Insight</th>
             <th>Job Description</th>
           </tr>
         </thead>
